fix(css): Apply 'font-display: swap;' for better text visibility during web font loading

--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -26,6 +26,7 @@ html {
 .newsletter-format {
     font-family: Georgia, "Times New Roman", Times, serif;
     background-color: #00415a;
+    font-display: swap;
 }
 
 /* Feel the beat */
@@ -50,7 +51,7 @@ html {
 .text-add-merch {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
-
+    font-display: swap;
 }
 
 
@@ -68,13 +69,14 @@ html {
     background-color: #00415a;
     border-color: silver;
     border-style: solid;
-
+    font-display: swap;
 }
 
 .profile-font,
 .title-all-song {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: white !important;
+    font-display: swap;
 }
 
 .btn-del-edit,
@@ -111,6 +113,7 @@ html {
     color: white;
     background-color: #00415a;
     padding: 10px;
+    font-display: swap;
 }
 
 .comments-card {
@@ -127,12 +130,14 @@ html {
     color: white;
     background-color: var(--bs-list-group-bg);
     width: auto;
+    font-display: swap;
 }
 
 .comments-card-title {
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: x-large;
     color: white;
+    font-display: swap;
 }
 
 .author {
@@ -269,6 +274,7 @@ html {
 .song-head {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #eaeaea;
+    font-display: swap;
 }
 
 .face-book {
@@ -280,6 +286,7 @@ html {
     color: white;
     min-height: 400px;
     font-family: Georgia, "Times New Roman", Times, serif;
+    font-display: swap;
 
 }
 
@@ -325,6 +332,7 @@ html {
     color: white;
     white-space: nowrap;
     font-size: large;
+    font-display: swap;
 }
 
 /* Nav bar active highlight */
@@ -444,6 +452,7 @@ audio {
     color: white;
     font-size: small;
     font-family: Georgia, "Times New Roman", Times, serif;
+    font-display: swap;
 }
 
 .card-title,
@@ -707,6 +716,7 @@ footer {
     background-color: #001f2b;
     color: white;
     text-align: center;
+    font-display: swap;
 }
 
 /* Media Sizes */
